# bungalo

./: .gitignore  Dockerfile  Makefile  README.md  config.example.toml  pyproject.toml  setup.sh  slack_manifest.json
.github/workflows/: docker-publish.yml  test.yml
bungalo/: app_manager.py  battery.py  cli.py  config.py  constants.py  dashboard.py  io.py  logger.py  main.py  paths.py  slack.py  ssh.py  system_metrics.py  web_server.py
bungalo/__tests__/: conftest.py  test_paths.py
bungalo/__tests__/backups/: test_nas.py  test_remote.py
bungalo/__tests__/config/: test_config.py  test_paths.py
bungalo/__tests__/plugins/: test_jellyfin.py  test_plex.py
bungalo/backups/: iphoto.py  nas.py  remote.py  validation.py
bungalo/config/: __init__.py  config.py  endpoints.py  paths.py
bungalo/nut/: battery.py  bootstrap.py  cli.py  client_manager.py  formatter.py  status.py
bungalo/plugins/: __init__.py  jellyfin.py  plex.py
frontend/: components.json  next.config.mjs  package-lock.json  package.json  server-entry.js  tailwind.config.ts  tsconfig.json
frontend/app/: dashboard-client.tsx  globals.css  layout.tsx  page.tsx
frontend/app/tasks/[taskId]/: page.tsx
frontend/components/: status-badge.tsx  task-card.tsx  theme-toggle.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  table.tsx
frontend/lib/: api.ts
scripts/: entrypoint.sh
