[project]
name = "bungalo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.18",
    "asyncssh>=2.14.2",
    "click>=8.1.8",
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "icloudpd>=1.27.4",
    "nut2>=2.1.1",
    "pydantic-settings>=2.8.1",
    "pydantic>=2.11.3",
    "rich>=14.0.0",
    "slack-sdk>=3.35.0",
    "uvicorn[standard]>=0.30.0",
    "wakeonlan>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.399",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.5",
]

[project.scripts]
bungalo = "bungalo.cli:cli"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Disable print statements
select = ["E4", "E7", "E9", "F", "I001", "T201"]

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
combine-as-imports = true

[tool.uv.sources]
icloudpd = { git = "https://github.com/piercefreeman/icloud_photos_downloader" }
